--- a/todos/templates/todos/todo_detail.html
+++ b/todos/templates/todos/todo_detail.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 
 {% block title %}
-    Todos List Page
+    Detail: {{ todo.title }}
 {% endblock %}
 
 {% block content %}
@@ -10,20 +10,20 @@
         <div class="offset-md-2 col-lg-9">
             <div class="page-header">
                 <h1>
-                    Todo List
+                    Todo {{ todo.title }}
                 </h1>
             </div>
         </div>
     </div>
-    <!-- Add a todo row -->
-    <div class="row">
+    <!-- todo list -->
+    <div class="row mt-3">
         <div class="offset-md-2 col-lg-6">
             <div class="list-group">
-                {% for todo in todos %}
-                    <div class="list-group-item {% if todo.is_completed %} todo-complete {% endif %}">
-                        <a class="text-decoration-none" href="{% url 'todos:todo_detail' todo.id %}">{{ todo.title }}</a>
-                    </div>
-                {% endfor %}
+                <div class="list-group-item {% if todo.is_completed %} todo-complete {% endif %}">
+                    <p>{{ todo.description|linebreaks }}</p>
+                    <p>Created By: {{ todo.author }}</p>
+                    <small>{{ todo.datetime_created }}</small>
+                </div>
             </div>
         </div>
     </div>
